Add a preview window of how the drawing will look in the game

--- a/AcnhPixelPress/AcnhPixelPress.csproj
+++ b/AcnhPixelPress/AcnhPixelPress.csproj
@@ -17,4 +17,10 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="ImageScreen.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
+
 </Project>
